--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "critical-code-examples",
+  "name": "critical-code-again",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxt/content": "^1.9.0",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
-  "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.2"
-  }
+  "devDependencies": {}
 }
